# pipewire-native-protocol

./: Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
pipewire-native-protocol/: Cargo.toml
pipewire-native-protocol/src/: client.rs  client_node.rs  core_proxy.rs  device.rs  error.rs  factory.rs  lib.rs  link.rs  metadata.rs  module.rs  node.rs  opcode.rs  port.rs  profiler.rs  proxy.rs  registry.rs
pipewirers/: Cargo.toml
pipewirers-cli/: Cargo.toml
pipewirers-cli/src/: main.rs
pipewirers/src/: lib.rs  spa_pods.rs
spa/: Cargo.toml
spa/src/: deserialize.rs  lib.rs  opcode.rs  serialize.rs  spa_pod_types.rs  value.rs
spa_derive/: Cargo.toml
spa_derive/src/: lib.rs
