[package]
name = "pipewire-native-protocol"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
cookie-factory = "0.3.3"
nom = "7.1.3"
tokio.workspace = true
zerocopy = { version = "0.8.6", features = ["derive"] }
spa = { path = "../spa"}
spa_derive = { path = "../spa_derive"}
