[package]
name = "pipewirers-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pipewire-native-protocol = { path = "../pipewire-native-protocol"}
tokio = { workspace = true, features = ["net", "macros", "rt", "rt-multi-thread"] }