[package]
name = "pipewirers-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
pipewire-native-protocol = { path = "../pipewire-native-protocol"}
shlex = "1.3.0"
tokio = { workspace = true, features = ["net", "macros", "rt", "rt-multi-thread"] }
