[package]
name = "pipewirers"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
bitfield-struct = "0.9.0"
cookie-factory = "0.3.3"
nom = "7.1.3"
tokio.workspace = true
zerocopy = { version = "0.7.35", features = ["derive"] }
spa = { path = "../spa"}
