[package]
name = "spa_derive"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
cookie-factory = "0.3.3"
nom = "7.1.3"
tokio.workspace = true
spa = { path = "../spa"}
proc-macro2 = "1"
quote = "1"
syn = "2.0.79"

[lib]
proc-macro = true
